app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Limelight&family=Notable&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tajawal:wght@200;300;400&display=swap');
@import "tailwindcss";

@theme {
  --color-cod-gray: #131313;
  --nav-bg: #13131326;
  --font-logo: "Oswald", sans-serif;
  --font-poppins: "Poppins", sans-serif;
  --font-lime: "Limelight", sans-serif;
  --font-notable: "Notable", sans-serif;
}



@theme {
  --animate-scroll: scroll 1.5s ease-out infinite;
  --animate-splashFirst: splash 0.3s ease-out 1s forwards;
  --animate-splashSecond: splash 0.3s ease-out 1.1s forwards;
  --animate-splashThird: splash 1s ease-out 1.5s forwards;
  --animate-borderX: borderX 1s ease-in-out 1s forwards;
  --animate-borderY: borderY 1s ease-in-out forwards;
  --animate-scale-in: scale-in 0.3s ease-in-out;
  --animate-scale-out: scale-out 0.2s ease-in-out;
  --animate-fade-out: fade-out 0.2s ease-in-out;
  --animate-fade-in: fade-in 0.2s ease-in-out;
  @keyframes scale-in {
    from {
      transform: scale(0.6);
    }
    to {
      transform: scale(1);
    }
  }
  @keyframes scale-out {
    0% {
      transform: scale(1);
      opacity: 1;
    }
    100% {
      transform: scale(0.8);
      opacity: 0;
    }
  }
  @keyframes fade-out {
    0% {
      opacity: 1;
    }
    100% {
      opacity: 0;
    }
  }
  @keyframes fade-in {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }
  @keyframes scroll {
    25% {
      opacity: 1;
    }
    100% {
      opacity: 0;
      transform: translateY(10px);
    }
  }

  @keyframes splash {
    0% {
      opacity: 1;
    }
    100% {
      opacity: 0;
    }
  }

  @keyframes borderX {
    0% {
      width: 0;
    }
    100% {
      width: 100%;
    }
  }

  @keyframes borderY {
    0% {
      height: 0;
    }
    100% {
      height: 100%;
    }
  }
}

html,
body,
#root
{
  box-sizing: border-box;
  background-color: #131313;

  height: 100%;
  overflow: hidden;
  margin: 0;
}

